# cpp-image-analysis

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  LICENSE  README.md  index.js  publish.sh
.github/workflows/: docker-publish.yml  main.yml
data/: assets.json
data/tessdata/: Eurostile.traineddata  readme
scripts/: index.js  package-lock.json  package.json  readassetlist.js
src/: args.h  beholdhelper.cpp  beholdhelper.h  httpserver.cpp  httpserver.h  json.hpp  main.cpp  networkhelper.cpp  networkhelper.h  utils.cpp  utils.h  voyimage.cpp  voyimage.h  wsserver.cpp  wsserver.h
src/opencv_surf/: surf.cpp  surf.h
